<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="MainFragment.AccountFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/ic_setting"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentRight="true"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:src="@drawable/ic_setting"></ImageView>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/profile_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:scaleType="centerCrop"
                android:id="@+id/cover_photo"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                 />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/cover_photo"
                android:layout_marginStart="20dp"
                android:layout_marginTop="-120dp"
                android:layout_marginBottom="10dp"
                android:background="@drawable/profile_photo"
                android:backgroundTint="@color/white"
                android:elevation="5dp"
                android:gravity="center"
                android:padding="5dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/avatar"
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    android:layout_gravity="center"
                    android:background="@drawable/profile_photo"
                    android:clipToOutline="true"
                     />

            </LinearLayout>


        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/profile_name"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:gravity="center"
                android:text=""
                android:textSize="30sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linlay1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingTop="5dp"
                android:paddingBottom="5dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/numberfollower"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0"

                        android:textSize="25sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/follower"
                        android:textAllCaps="true"

                        android:textSize="13sp" />

                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"

                android:gravity="center"
                android:paddingTop="5dp"
                android:paddingBottom="5dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/numberfollowing"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0"

                        android:textSize="25sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/following"
                        android:textAllCaps="true"

                        android:textSize="13sp" />

                </LinearLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"

                android:gravity="center"
                android:paddingTop="5dp"
                android:paddingBottom="5dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/numberpost"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="2"

                        android:textSize="25sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/yournews"
                        android:textAllCaps="true"

                        android:textSize="13sp" />

                </LinearLayout>

            </RelativeLayout>
        </LinearLayout>

        <TextView
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/dashboard_item_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/status"></TextView>

        <TextView
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:id="@+id/status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginBottom="10dp"
            android:text=""></TextView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="72dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btn_edit"
                    android:layout_width="122dp"
                    android:layout_height="50dp"
                    android:background="@drawable/btn_bg"
                    android:paddingStart="15dp"
                    android:text="@string/editprofile"
                    android:textAllCaps="false"
                    android:textColor="@color/white" />


            </LinearLayout>


        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:background="#22000000"></View>

        <TextView
            style="@style/TextButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:text="@string/image">

        </TextView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/lv_profileimage"
            android:layout_width="match_parent"
            android:layout_height="600dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
             />
    </LinearLayout>

</ScrollView>